# Veracity

./: COMPETITOR_AGENT_TESTS.md  Competitor_Agent_Upgrade.md  FRONTEND_BUILD_PLAN.md  README.md  app.py  fetcher_output.txt  langgraph.json  main.py  pyproject.toml  requirements.txt  test_fetcher.py  test_import.py  test_integration.py
.github/: copilot-instructions.md
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
chroma_db/: chroma.sqlite3
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/hooks/: useAgentStream.ts
frontend/lib/: mockData.ts  sanitize.ts  validate.ts
frontend/store/: index.ts
frontend/types/: agents.ts  artifacts.ts
scripts/: llm_judge.py  run_all_tests.py  test_adjacent_graph.py  test_competitor_graph.py  test_market_trend_graph.py  test_pricing_graph.py  test_subgraphs_llm_judge.py  test_user_voice_graph.py  test_veracity_graph.py  test_win_loss_graph.py
src/: __init__.py  langgraph.json
src/graphs/: __init__.py  adjacent_graph.py  competitor_graph.py  (+7 more)
test_results/: adjacent_market_graph_20260315_154120.json  competitor_analysis_graph_20260315_154205.json  market_trend_graph_20260315_154325.json  pricing_analysis_graph_20260315_154442.json  summary_20260315_154636.json  user_voice_(voc)_graph_20260315_154548.json
tests/: conftest.py  test_competitor_node.py  test_competitor_tools.py  test_llm_judge.py  test_marketing_trend_agent.py  test_persistence_utils.py  test_win_loss_agent.py
(+53 files in other folders)
